# PDF-RAG

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  backend.dockerfile  main.py  ollama.dockerfile  ollama_server_start.sh  pyproject.toml
backend/libs/: helpers.py  models.py  utils.py
frontend/: Dockerfile  frontend.dockerfile  package-lock.json  package.json
frontend/src/pages/: upload.js
ollama_backend/: Dockerfile  ollama_server_start.sh
