[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "faiss-cpu>=1.9.0.post1",
    "fastapi>=0.115.6",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.14",
    "langchain-google-genai>=2.0.7",
    "langchain-ollama>=0.2.2",
    "ollama>=0.4.5",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "setuptools>=75.7.0",
    "uvicorn>=0.34.0",
]